add data and set factors in rmd

--- a/DDSA_Main.Rmd
+++ b/DDSA_Main.Rmd
@@ -7,22 +7,49 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+# Add libraries
+library(rsample)
+library(yardstick)
+library(corrr)
+library(readxl)
+library(tidyverse)
+library(glmnet)
+library(rpart)
+library(rpart.plot)
+library(randomForest)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+# Load raw data
+raw_DDSA <- read_excel("CaseStudy2-data.xlsx")
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+# Change characters to factors for more meaningful analysis
+DDSA <- raw_DDSA%>%
+  mutate_if(is.character, as.factor) %>%
+  select(Attrition, everything())
+
+# attach so we don't have to keep writing DDSA$
+attach(DDSA)
+```
+
+```{r}
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
