--- a/DDSA_Main.Rmd
+++ b/DDSA_Main.Rmd
@@ -116,16 +116,40 @@ test_tbl <- testing(train_test_split)
 ```
 
 ```{r}
+# Breakdown of the test split ~ using 80% to test
 table(test_tbl$Attrition)
 237/nrow(test_tbl)
 ```
 
 ```{r}
+# Grow our classification trees
 modelCart = rpart(Attrition ~ ., data=train_tbl, method="class")
 #Plot the model
 prp(modelCart)
 
 ```
 
+
+```{r}
+#Predict the test data
+predictionCart <- predict(modelCart, newdata=test_tbl, type="class")
+#CART Accuracy
+#Confusion matrix 
+t1 <- table(test_tbl$Attrition, predictionCart)
+print(t1)
+```
+
+
+```{r}
+#CART model accuracy
+(t1[1]+t1[4])/(nrow(test_tbl))
+```
+
+
+```{r}
+# Random Forest model
+modelRf = randomForest(Attrition ~ ., data=train_tbl, ntree = 100, mtry = 5, importance = TRUE, method="class")
+print(modelRf)
+```
 
 
